Fix privacy policy page on mobile

--- a/src/pages/legalStuff/PrivacyPolicyPage.scss
+++ b/src/pages/legalStuff/PrivacyPolicyPage.scss
@@ -1,3 +1,7 @@
+$mobile-width: 40em;
+
 .content {
-  width: 40%;
+  @media only screen and (min-width: $mobile-width) {
+    width: 40%;
+  }
 }
